<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_graph"
    app:startDestination="@+id/autoLoginFragment">

    <fragment
        android:id="@+id/autoLoginFragment"
        android:name="com.vito.cornelius.feature.registration.autologin.ui.RegistrationAutoLoginFragment"
        android:label="@string/registration_auto_login"
        tools:layout="@layout/registration_fragment_auto_login">
        <action
            android:id="@+id/toSignInFragment"
            app:destination="@+id/signInFragment"
            app:popUpTo="@+id/autoLoginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.vito.cornelius.feature.registration.signin.ui.RegistrationSignInFragment"
        android:label="@string/registration_sign_in"
        tools:layout="@layout/registration_fragment_sign_in">
        <action
            android:id="@+id/toSignUpFragment"
            app:destination="@+id/signUpFragment"
            app:popUpTo="@+id/signUpFragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.vito.cornelius.feature.registration.signup.ui.RegistrationSignUpFragment"
        android:label="@string/registration_sign_up"
        tools:layout="@layout/registration_fragment_sign_up">
        <action
            android:id="@+id/toSignInFragment"
            app:destination="@+id/signInFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/signInFragment"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>